docs: improve wording in creating blocks guide

--- a/docs/3.creating-blocks.md
+++ b/docs/3.creating-blocks.md
@@ -32,12 +32,12 @@ Minutes](https://learnxinyminutes.com/docs/lua/) for a quick introduction.
 
 ## Hierarchical Blocks
 
+The simplest kind of custom block that can be created in LuaRadio is a
+hierarchical block.
+
 <p align="center">
 <img src="figures/figure_hierarchical_block.png" />
 </p>
-
-The simplest kind of custom block that can be created in LuaRadio is a
-hierarchical block.
 
 A hierarchical block is a composition of several blocks into a single block,
 which abstracts the underlying flow graph and provides a simpler input/output
@@ -53,15 +53,15 @@ There are two ways to create a hierarchical block. The first is to use
 [`CompositeBlock`](0.reference-manual.md#compositeblock) directly, and the
 second is to derive a block class from `CompositeBlock`.
 
-In the example below, we'll create a hierarchical block both ways for a
-Wideband FM Mono Demodulator for FM broadcast radio, described by the following
-flow graph:
+In the example below, we'll create a hierarchical block both ways for a mono
+Wideband FM Demodulator for FM broadcast radio, described by the following flow
+graph:
 
 <p align="center">
 <img src="figures/flowgraph_wbfm_mono_demodulator_hierarchical.png" />
 </p>
 
-#### Using `CompositeBlock` directly
+### Using `CompositeBlock` directly
 
 ``` lua
 local radio = require('radio')
@@ -91,14 +91,31 @@ end
 In this example, we create a function `wbfm_mono_demodulator_factory()` which
 returns a `CompositeBlock` that can be used as an Wideband FM Mono Demodulator
 in a flow graph. The argument to the function specifies the time constant of
-the FM De-emphasis filter (75 μS in the Americas and South Korea, and 50 μS
-everywhere else).
+the FM De-emphasis filter (typically 75 μS in the Americas and South Korea, and
+50 μS everywhere else).
+
+``` lua
+    -- Blocks
+    local fm_demod = radio.FrequencyDiscriminatorBlock(1.25)
+    local af_filter = radio.LowpassFilterBlock(128, 15e3)
+    local af_deemphasis = radio.FMDeemphasisFilterBlock(tau)
+    local demodulator = radio.CompositeBlock()
+
+    -- Connections
+    demodulator:connect(fm_demod, af_filter, af_deemphasis)
+```
 
 The blocks section instantiates the internal blocks of the demodulator, as well
-as a `CompositeBlock` that will hold their composition. The connections in the
-connections section connects the internal blocks. This procedure is identical
-to building a top-level flow graph, as seen in the [Getting
+as a `CompositeBlock` that will hold their composition. The connections section
+connects the internal blocks. This procedure is identical to building a
+top-level flow graph, as seen in the [Getting
 Started](2.getting-started.md#example) guide.
+
+``` lua
+    -- Type signature
+    demodulator:add_type_signature({block.Input("in", radio.types.ComplexFloat32)},
+                                   {block.Output("out", radio.types.Float32)})
+```
 
 The type signature section adds a type signature that defines the names and
 data types of the boundary input/output ports of the hierarchical block. This
@@ -113,8 +130,14 @@ second argument is the analogous for output ports, with
 [`radio.block.Output()`](0.reference-manual.md#output) descriptors.  In this
 case, there is one input named `in` of type `ComplexFloat32`, and one output
 named `out` of type `Float32`. We may call `add_type_signature()` as many times
-as we need to register multiple type signatures of different data types, but
-they must all share the same input/output port count and names.
+as we need to register multiple type signatures of different data types as
+needed, but they must all share the same input/output port count and names.
+
+``` lua
+    -- Aliases
+    demodulator:connect(demodulator, "in", fm_demod, "in")
+    demodulator:connect(demodulator, "out", af_deemphasis, "out")
+```
 
 The aliases section aliases the hierarchical block input/output ports we
 defined in `add_type_signature()` to concrete input/output ports of its
@@ -133,15 +156,15 @@ graph:
 
 ``` lua
 radio.CompositeBlock():connect(
-    radio.RtlSdrSource(88.5e6 - 250e3, 1102500), -- RTL-SDR source, offset-tuned to 88.5MHz-250KHz
-    radio.TunerBlock(-250e3, 200e3, 5),          -- Translate -250 KHz, filter 200 KHz, decimate by 5
+    radio.RtlSdrSource(88.5e6 - 250e3, 1102500), -- RTL-SDR source, offset-tuned to 88.5MHz-250kHz
+    radio.TunerBlock(-250e3, 200e3, 5),          -- Translate -250 kHz, filter 200 kHz, decimate by 5
     wbfm_mono_demodulator_factory(75e-6),        -- Wideband FM Mono Demodulator
     radio.DownsamplerBlock(5),                   -- Downsample by 5
     radio.PulseAudioSink(1)                      -- Play to system audio with PulseAudio
 ):run()
 ```
 
-#### Deriving from `CompositeBlock`
+### Deriving from `CompositeBlock`
 
 Instead of building our Wideband FM Mono Demodulator composition in a function,
 we can build it in a new block class derived from `CompositeBlock`. The
@@ -288,7 +311,7 @@ vec.data[0].value = 5
 print(vec.data[0]) --> Float32<value=5>
 print(vec) --> [Float32<value=5>, Float32<value=0>, Float32<value=0>, Float32<value=0>]
 
--- Looping over a vector's elements
+-- Iterating over a vector's elements
 -- (Note: Lua for-loop ranges are inclusive)
 for i = 0, vec.length-1 do
     print(vec.data[i])
@@ -313,9 +336,9 @@ print(vec.data[7]) --> Float32<value=26>
 ```
 
 Much of block processing consists of either iterating over a vector and
-modifying its elements, or passing the vector data to an external library.
-Since `vec.data` is a `float *` (in the example above) and `vec.length` is its
-length, we have all of the information we need to pass the vector to an
+modifying its elements, or passing the vector to an external library.  Since
+`vec.data` is a `float *` (in the example above) and `vec.length` is its
+length, we have all of the information we need to pass the vector memory to an
 external library for processing.
 
 Resizing a vector only causes a re-allocation of the underlying memory when it
@@ -324,9 +347,7 @@ smaller size; just the bookkeeping is updated.
 
 All vectors are allocated with page alignment. This is to enable their
 processing with certain library routines that require, or perform better with,
-aligned buffers. This is usually because SIMD operations are involved.
-
-As with other objects in Lua, vectors are also garbage collected.
+aligned buffers. This is often because SIMD operations are involved.
 
 ##### Caveats
 
@@ -339,10 +360,11 @@ with block arguments and curly bracket arrays.
 ## Blocks
 
 LuaRadio blocks are written in pure Lua, but may interface with external
-libraries via the [LuaJIT foreign function interface
-(FFI)](http://luajit.org/ext_ffi_api.html) to offload processing.
+libraries via the [LuaJIT foreign function
+interface](http://luajit.org/ext_ffi_api.html) (FFI) to offload processing,
+when needed.
 
-Each block is run in an independent process, with its own Lua state. Blocks
+Each block is run in an independent process, under its own Lua state. Blocks
 typically have one hot loop, so they can benefit greatly from LuaJIT's
 just-in-time trace compiler, and many pure Lua blocks do achieve good
 performance without needing acceleration from an external library.
@@ -406,7 +428,7 @@ function MyBlock:initialize()
     -- Perform initialization here
 
     -- Can use self:get_input_type(), self:get_output_type(), self:get_rate()
-    -- to get differentiated type signature and sample rate.
+    -- to get differentiated type signature and sample rate
 end
 
 function MyBlock:process(...)
@@ -429,9 +451,9 @@ return MyBlock
 A type signature defines the names and data types of input and output ports.
 Type signatures must be added in the `instantiate(...)` method of a block, so
 that the block can be connected into a flow graph after it has been
-instantiated.  When a flow graph is run, every block — starting from sources —
-is differentiated into the type signature that is compatible with its input
-types.
+instantiated.  When a flow graph is run, every block — starting from sources,
+downstream to sinks — is differentiated into the type signature that is
+compatible with its input types.
 
 The syntax for adding a type signature is:
 
@@ -446,8 +468,8 @@ descriptors, which specify the name and data type of each input port. The
 second argument is analogous, with
 [`radio.block.Output()`](0.reference-manual.md#output) descriptors, for output
 ports.  We may call `add_type_signature()` as many times as needed to register
-multiple type signatures of different data types, but they must all share the
-same input/output port count and names.
+type signatures of different data types, but they must all share the same
+input/output port count and names.
 
 Source and sink type signatures can be described with an empty array for inputs
 or outputs, respectively.
@@ -498,9 +520,9 @@ If a block with the type signatures above is differentiated to the
 `initialize_complex()`, and `process()` will be mapped to `process_complex()`.
 Analogous mapping occurs in the `Float32` type differentiation.
 
-This feature removes redundant differentiation from the critical path and makes
-it easier to separate type-dependent initialization and processing code in a
-block.
+This feature removes redundant differentiation from the critical path of
+`process()` and makes it easier to separate type-dependent initialization and
+processing code in a block.
 
 A block can look up its differentiated types in `initialize()` or `process()`
 with the [`get_input_type()`](0.reference-manual.md#blockget_input_typeindex1)
@@ -566,9 +588,9 @@ block have equal sample rates.
 Although we could have created a new output vector in `process()`, instead of
 reusing `self.out`, it would lead to unnecessary memory allocations and
 deallocations as the vector is created on each call to `process()` and later
-garbage collected. If this block were in the critical path of high rate
-samples, then this can also cause more active memory usage than necessary, as
-the garbage collector plays catch-up.
+garbage collected. If this block were in the path of high sample throughput,
+then this can also cause more active memory usage than necessary, as the
+garbage collector plays catch-up.
 
 Reusing `self.out` allows the output vector to approach a steady state size, as
 it is resized to accommodate the inputs. In turn, this allows the block to
@@ -636,15 +658,15 @@ $
 ```
 
 Many of testing jig specifications in the LuaRadio test suite are code
-generated with Python 3. See the LuaRadio [tests](../tests) folder for more
+generated with Python 3. See the LuaRadio [`tests/`](../tests) folder for more
 details.
 
 ### Benchmarking
 
 LuaRadio includes a [`BenchmarkSink`](0.reference-manual.md#benchmarksink) for
-benchmarking blocks. This sink reports the actual computational rate samples
-are consumed in samples per second. This rate can be used as a rough
-performance benchmark of a block.
+benchmarking blocks. This sink reports the average throughput of samples
+delivered to the sink in samples per second. This throughput can be used as a
+rough performance benchmark of a block.
 
 For example, to benchmark the `MultiplyBlock` we built above:
 
@@ -676,9 +698,9 @@ The `BenchmarkSink` is technically benchmarking the entire flow graph,
 including the `NullSource` and the framework's overhead of serializing samples
 between blocks. However, in this case, the `MultiplyBlock` is the computational
 limiting factor by several orders of magnitude, so the overhead of `NullSource`
-and of the framework is relatively insignificant, and the resulting rate
+and the framework is relatively insignificant, and the resulting rate
 corresponds roughly to that of the `MultiplyBlock`. Other situations may
-require a different strategy for benchmarking (see more caveats below).
+require a different strategy for benchmarking (see caveats below).
 
 Running this flow graph on my platform:
 
@@ -706,7 +728,7 @@ It's also important to point out that while the `NullSource` is applicable to
 many signal processing blocks, which will perform their computation regardless
 of if the samples are all zero-valued, it might not be the appropriate stimulus
 for blocks that have value-dependent code paths. In those cases, a random
-source or a deliberately constructed source is more appropriate.
+source or a deliberately constructed source may be more appropriate.
 
 ### FFI
 
@@ -723,12 +745,11 @@ and
 [`volk_32f_x2_multiply_32f()`](http://libvolk.org/doxygen/volk_32f_x2_multiply_32f.html),
 respectively.
 
-The [LuaJIT foreign function interface
-(FFI)](http://luajit.org/ext_ffi_api.html) allows LuaJIT scripts to call C
-functions and access C symbols in dynamically loaded external libraries. Using
-the FFI requires defining the function prototypes and relevant constants first,
-like a C header file would, so that LuaJIT has the necessary information to
-translate types and operate the C ABI.
+The [LuaJIT foreign function interface](http://luajit.org/ext_ffi_api.html)
+(FFI) allows LuaJIT scripts to call C functions and access C symbols in
+dynamically loaded external libraries. This requires defining the function
+prototypes and relevant constants first, like a C header file would, so that
+LuaJIT has the necessary information to translate types and operate the C ABI.
 
 In the example below, we create `FasterMultiplyBlock`. This block is similar to
 the `MultiplyBlock` above, except that it uses the VOLK library with the FFI in
@@ -792,19 +813,19 @@ The example defines the functions for the two VOLK kernels in
 [`ffi.cdef()`](http://luajit.org/ext_ffi_api.html#ffi_cdef). The first is for
 multiplying complex floats, and the second is for multiplying real floats. The
 definitions are function pointers, because VOLK kernels are exposed as function
-pointers (despite the prototypes in the documentation).
+pointers (despite their prototypes in the VOLK documentation).
 
-These definitions are almost identical to their library prototypes
-([`volk_32fc_x2_multiply_32fc()`](http://libvolk.org/doxygen/volk_32fc_x2_multiply_32fc.html)
+These definitions are almost identical to their library prototypes —
+[`volk_32fc_x2_multiply_32fc()`](http://libvolk.org/doxygen/volk_32fc_x2_multiply_32fc.html)
 and
-[`volk_32f_x2_multiply_32f()`](http://libvolk.org/doxygen/volk_32f_x2_multiply_32f.html)),
-with the exception of substituting the VOLK `lv_32fc_t` type for
+[`volk_32f_x2_multiply_32f()`](http://libvolk.org/doxygen/volk_32f_x2_multiply_32f.html))
+— with the exception of substituting the VOLK `lv_32fc_t` type for
 `complex_float32_t`, and the C `float` type for `float32_t`.
 
-These substituted types are binary compatible, but the substitution is
-necessary for the FFI to accept the use of the LuaRadio `ComplexFloat32` and
-`Float32` data types in those argument positions so it will not raise a type
-mismatch. Other alternatives are to use a typedef alias or
+The substituted types are binary compatible. The substitution is necessary for
+the FFI to accept the use of the LuaRadio `ComplexFloat32` and `Float32` data
+types in those argument positions and not raise a type mismatch.  Other
+alternatives are to use a `typedef` alias or
 [`ffi.cast()`](http://luajit.org/ext_ffi_api.html#ffi_cast).
 
 Next, the example looks up the VOLK library from the `radio.platform.libs`
@@ -819,7 +840,7 @@ directly.
 Rather than sharing one `process()` method, as the previous `MultiplyBlock`
 implementation did, this version of `MultiplyBlock` binds a custom process
 method with `add_type_signature()` to each type signature, since the library
-call depends on the type signature.
+call depends on the differentiated type signature.
 
 Each `process()` method resizes the output vector, calls the library routine
 with the input vector data and output vector data, and returns the output
@@ -936,8 +957,8 @@ consists of an opaque structure pointer aliased to `fskmod`, create and destroy
 functions for the `fskmod` object, and the main `fskmod_modulate()` method,
 which takes an input symbol (in our case, a bit) and writes the samples of the
 modulated signal to a complex-valued array. These definitions are identical to
-those in the `liquid.h` header file, except for substituting the `float
-complex` type for the compatible LuaRadio data type, `complex_float32_t`, in
+those in the `liquid.h` header file, except for substituting the `float complex`
+type for the compatible LuaRadio data type, `complex_float32_t`, in
 `fskmod_modulate()`.
 
 The block's `initialize()` method computes the relevant parameters for
@@ -980,14 +1001,14 @@ plotting sink:
 ``` lua
 local top = radio.CompositeBlock():connect(
   radio.UniformRandomSource(radio.types.Bit, 9600), -- Random bit source, 9600 sample rate (bit rate)
-  BFSKModulator(100e3, 1e6),                  -- BFSK Modulator, 100 KHz bandwidth, 1 MHz sample rate
+  BFSKModulator(100e3, 1e6),                  -- BFSK Modulator, 100 kHz deviation, 1 MHz sample rate
   radio.ThrottleBlock(),                      -- Throttle block to pace plotting
   radio.GnuplotSpectrumSink()                 -- Spectrum plotting sink
 ):run()
 ```
 
 The resulting plot shows the expected two lobes of the BFSK modulated signal,
-100 KHz apart:
+100 kHz apart:
 
 <p align="center">
 <img src="figures/plot_bfsk_modulator_example.png" />
@@ -1009,13 +1030,13 @@ and so on.
 
 LuaRadio offers two solutions for custom types. The first, called a [`CStruct`
 type](0.reference-manual.md#cstructtype), is a type backed by a constant-size C
-structure. This is appropriate for fixed-size data types and is efficiently
+structure. This is appropriate for fixed size data types and is efficiently
 serialized between blocks. All four basic types are themselves, in fact,
 `CStruct` types.
 
 The second, called an [`Object` type](0.reference-manual.md#objecttype), is a
-type backed by any Lua object.  Instances of this type can be arbitrarily-sized
-and contain any Lua primitive data types (tables, numbers, strings, booleans,
+type backed by any Lua object.  Instances of this type can be variable size and
+contain any Lua primitive data types (tables, numbers, strings, booleans,
 etc.). `Object` types are not as efficient as `CStruct` types, as they are
 marshalled and unmarshalled with [MessagePack](http://msgpack.org/) when
 serialized between blocks. However, for relatively low rate uses, they can be
@@ -1024,14 +1045,15 @@ very effective.
 ### `CStruct` types
 
 `CStruct` types are manufactured with the
-[`radio.types.CStructType.factory(ctype,
-methods)`](0.reference-manual.md#cstructtypefactoryctype-methods) factory
-function. The first parameter is the name of the C structure type, and the
-second parameter is an optional table of methods and metamethods to be
-associated with the type. The type will automatically inherit `.vector()` and
-`.vector_from_array()` static methods, so that vectors of the type can be
-created by blocks, as well as internal serialization methods so the framework
-can serialize the type between blocks. See the [LuaRadio Reference
+[`radio.types.CStructType.factory(ctype, methods)`](0.reference-manual.md#cstructtypefactoryctype-methods)
+factory function. The first parameter is the name of the C structure type, and
+the second parameter is an optional table of methods and metamethods to be
+associated with the type.
+
+The type will automatically inherit `.vector()` and `.vector_from_array()`
+static methods, so that vectors of the type can be created by blocks, as well
+as internal serialization methods so that the framework can serialize the type
+between blocks. See the [LuaRadio Reference
 Manual](0.reference-manual.md#cstructtype) for more inherited methods of
 `CStruct` types.
 
@@ -1120,14 +1142,16 @@ end
 
 `Object` types are manufactured with the
 [`radio.types.ObjectType.factory()`](0.reference-manual.md#objecttypefactorymethods)
-factory function. The type will automatically inherit `.vector()` and
-`.vector_from_array()` static methods, so that vectors of the type can be
-created by blocks, as well as internal serialization methods so the framework
-can serialize the type between blocks.  In addition, the type will inherit the
-`.to_json()` method to form a JSON representation, enabling the type to be used
-with the [`JSONSink`](0.reference-manual.md#jsonsink). See the [LuaRadio
-Reference Manual](0.reference-manual.md#objecttype) for more inherited methods
-of `Object` types.
+factory function.
+
+The type will automatically inherit `.vector()` and `.vector_from_array()`
+static methods, so that vectors of the type can be created by blocks, as well
+as internal serialization methods so that the framework can serialize the type
+between blocks.  In addition, the type will inherit the `.to_json()` method to
+form a JSON representation, enabling the type to be used with the
+[`JSONSink`](0.reference-manual.md#jsonsink). See the [LuaRadio Reference
+Manual](0.reference-manual.md#objecttype) for more inherited methods of
+`Object` types.
 
 After an `Object` data type is created, its `.new()` constructor must be
 implemented. Additional methods can be defined directly on the data type class.
@@ -1181,13 +1205,13 @@ print(vec)
 --> [BarPacket<address="foo", data="abcd">, BarPacket<address="waldo", data="deadbeef">]
 ```
 
-As the example shows, `BarPacket` can contain arbitrarily sized fields.
+As the example shows, `BarPacket` can contain variably sized fields.
 
 Vectors of `Object` types provide a similar interface to `CStruct` type
 vectors. Note that their data array is also zero-indexed, for consistency with
 `CStruct` type vectors.
 
-Just like the `CStruct` type, blocks can use the `BarPacket` type in type
+Just like `CStruct` based types, blocks can use the `BarPacket` type in type
 signatures to produce or consume vectors of the type:
 
 ``` lua
@@ -1250,7 +1274,7 @@ bit.bnot(0xfffffff0) --> 0x0000000f
 
 There are two important caveats with the `bit` library. First, all operations
 with `bit` are limited to 32-bits. For many use cases, this is not a major
-issue and easy to work around. Second, all results of bitwise operations are
+issue, and easy to work around. Second, all results of bitwise operations are
 returned as **signed 32-bit** numbers. This is generally not an issue for
 bitwise operations, which are agnostic to signedness interpretation (with the
 exception of arithmetic shifts), but it is an issue when comparing bitwise
@@ -1267,9 +1291,9 @@ operation results are returned as signed 32-bit numbers in a double. 0x80000000
 and -2147483648, 0xffffffff and -1, 0xfffffffe and -2 are all two different
 double numbers.
 
-So, to compare the result of a bitwise operation to a literal that has its 31st
-bit set (the sign bit), first normalize the literal to a signed 32-bit number
-with `bit.tobit()`:
+To compare the result of a bitwise operation to a literal that has its 31st bit
+set (the sign bit), first normalize the literal to a signed 32-bit number with
+`bit.tobit()`:
 
 ``` lua
 print(bit.band(0xdeadbeef, 0x80000000) == bit.tobit(0x80000000)) --> true
@@ -1290,3 +1314,24 @@ using Torch's [trepl](https://github.com/torch/trepl) for prototyping,
 available in [LuaRocks](https://luarocks.org/modules/vsergeev/trepl-torchless).
 It supports table dumping, pretty printing, tab completion, and line history.
 
+For some blocks, it may be more productive to prototype signal processing
+routines in Python, with libraries like [numpy](http://www.numpy.org/),
+[scipy](http://docs.scipy.org/doc/scipy/reference/index.html), and
+[matplotlib](http://matplotlib.org/), which allow for more traditional sample
+by sample development and plotting than a flow graph paradigm like LuaRadio.
+When the routine is ready, it can be ported to a LuaRadio block for performance
+and reusability.
+
+Samples from LuaRadio can be dumped to a file with the
+[`RawFileSink`](0.reference-manual.md#rawfilesink),
+[`IQFileSink`](0.reference-manual.md#iqfilesink), or
+[`RealFileSink`](0.reference-manual.md#realfilesink), and imported into Python
+for inspection with the
+[`numpy.fromfile()`](http://docs.scipy.org/doc/numpy-1.10.0/reference/generated/numpy.fromfile.html)
+function. The `numpy.float32` type is compatible with LuaRadio's `Float32`
+type, and the `numpy.complex64` type is compatible with LuaRadio's
+`ComplexFloat32` type. The reverse is also possible with numpy ndarray's
+[`.tofile()`](http://docs.scipy.org/doc/numpy-1.10.0/reference/generated/numpy.ndarray.tofile.html#numpy.ndarray.tofile)
+method, and the [`RawFileSource`](0.reference-manual.md#rawfilesink),
+[`IQFileSource`](0.reference-manual.md#iqfilesource), or
+[`RealFileSource`](0.reference-manual.md#realfilesource) blocks.
