docs: improve wording in embedding luaradio guide

--- a/docs/4.embedding-luaradio.md
+++ b/docs/4.embedding-luaradio.md
@@ -7,7 +7,7 @@ applications can source or sink samples with LuaRadio flow graphs.
 
 * [Introduction](#introduction)
 * [C API Synopsis](#c-api-synopsis)
-* [Interacting with Flow Graphs](#interacting-with-flow-graphs)
+* [Interfacing Samples](#interfacing-samples)
 * [Examples](#examples)
     * [FM Radio](#fm-radio)
     * [RDS Timesync](#rds-timesync)
@@ -17,8 +17,9 @@ applications can source or sink samples with LuaRadio flow graphs.
 
 ## Introduction
 
-LuaRadio can be distributed and run from its pure Lua file sources, but it can
-also package itself into one dual-purpose binary library, `libluaradio.so`.
+LuaRadio can be run directly from its Lua file sources, but when it is
+installed, it is packaged into one dual-purpose binary library called
+`libluaradio`.
 
 This library can both be loaded as the `radio` package by the LuaJIT
 interpreter for scripts, and linked into C/C++ applications to be run via its C
@@ -26,11 +27,11 @@ API.  The packaged library contains the entire LuaRadio framework, bytecode
 compiled, as well as a small C API for creating LuaRadio contexts, loading
 scripts with a top-level flow graph, and controlling the top-level flow graph.
 
-A LuaRadio packaged library installation looks roughly like this:
+A LuaRadio packaged library installation provides the following:
 
 * `/usr/bin/luaradio` — LuaRadio runner helper script
-* `/usr/lib/libluaradio.so` — Shared library for linking
-* `/usr/lib/libluaradio.a` — Static library for linking
+* `/usr/lib/libluaradio.so` — Shared library for dynamic linking
+* `/usr/lib/libluaradio.a` — Static library for static linking
 * `/usr/include/luaradio.h` — C API header file
 * `/usr/lib/lua/5.1/radio.so` *-symlink->* `/usr/lib/libluaradio.so` — Lua module
 
@@ -85,7 +86,7 @@ The C API also defines the C types corresponding to the four basic data types
 [`radio.types.Float32`](0.reference-manual.md#float32),
 [`radio.types.Bit`](0.reference-manual.md#bit), and
 [`radio.types.Byte`](0.reference-manual.md#byte), under `complex_float32_t`,
-`float32_t`, `bit_t`, `byte_t` types, respectively.
+`float32_t`, `bit_t`, `byte_t`, respectively.
 
 In basic usage of the API, applications create a LuaRadio context with
 `luaradio_new()`, load a script that returns a top-level flow graph with
@@ -105,43 +106,50 @@ context with `luaradio_get_state()` . Applications can use this with the Lua C
 API to prepare a custom environment for scripts prior to loading them.
 
 Most API functions return 0 on success and a negative integer code on failure.
-`luaradio_new()` returns NULL on memory allocation failure.
-`luaradio_strerror()` can be used to get a human readable error string of the
-last failure.
+`luaradio_new()` returns `NULL` on memory allocation failure.
+`luaradio_strerror()` can be used to get a human-readable error string of the
+last failure that occurred.
 
 The API is re-entrant, as all relevant state is maintained in the `luaradio_t`
 context.
 
-## Interacting with Flow Graphs
+## Interfacing Samples
 
 An application may source or sink samples in a LuaRadio flow graph through a
-pair of connected file descriptors, e.g. from `pipe()` or `socketpair()`.  The
+pair of connected file descriptors, e.g. from `pipe()` or `socketpair()`.  A
 file descriptor can be handed off to LuaRadio as a parameter to a
 [`RawFileSource`](0.reference-manual.md#rawfilesource), if the application is
 sourcing samples, or a [`RawFileSink`](0.reference-manual.md#rawfilesink), if
-the application is sinking samples (or both). The application can then use
-standard file descriptor I/O calls `read()` or `write()` on its file descriptor
-to serialize samples to or from LuaRadio. The application must know the C type
-of the samples, as the samples are read and written raw, in their native memory
-representation, with no marshalling.
+the application is sinking samples, or both.
+
+The application can then use standard file descriptor I/O calls `read()` or
+`write()` on its file descriptor to serialize samples from or to LuaRadio. The
+application must specify the C type of the samples, as the samples are read and
+written raw, in their native memory representation, with no marshalling.
+
+In the case of an application sinking samples of a variable-sized
+[`Object`](0.reference-manual.md#objecttype) based data type (e.g. for a
+decoded packet type), the [`JSONSink`](0.reference-manual.md#jsonsink) can be
+used.  This sink accepts a file descriptor parameter, like the `RawFileSink`,
+but serializes individual samples with JSON, separated by a newline delimiter.
+The application can split each serialized sample by the newline delimiter, and
+deserialize the sample with JSON.
 
 In the examples below, file descriptor hand-off and parameter passing happens
-through string substitution of a script template. This solution is simple,
-flexible, and demonstrates how to embed a LuaRadio script, but is inherently
-prone to unintended errors and injection.
+through string substitution of a script template. This solution is simple and
+demonstrates how to embed a LuaRadio script, but is inherently prone to
+unintended errors and injection.
 
 The recommended approach for applications adding support for user defined
 LuaRadio scripts is to use the [Lua C
 API](https://www.lua.org/manual/5.1/manual.html#3) with the underlying Lua
-state of the LuaRadio context (`luaradio_get_state()`) to define a custom
-environment.
+state of the LuaRadio context (see `luaradio_get_state()`) to define a custom
+environment. For example, the application might define an environment
+containing variables with the source and sink file descriptors, or even
+pre-instantiated `RawFileSource` and `RawFileSink` blocks, that can be used in
+the user defined scripts as sources from or sinks to the application.
 
-For example, the application might define an environment containing variables
-with the source and sink file descriptors, or even pre-instantiated
-`RawFileSource` and `RawFileSink` blocks, that can be used in the user defined
-scripts as sources or sinks to the application.
-
-##### Caveats
+##### Aside
 
 Embedding LuaRadio means embedding an interpreter and framework that is not
 native to the application. This is powerful when the goal is to provide the
@@ -150,13 +158,13 @@ satisfying when the goal is to leverage LuaRadio as a signal processing engine
 for a pre-defined flow graph, because the flow graph blocks do not feel like
 first-class citizens to the application. On the other hand, the alternative —
 binding every block into a language — adds other layers of complexity like code
-generation and mapping types. LuaRadio follows the Lua embedding approach.
+generation and mapping types.
 
 ## Examples
 
 ### FM Radio
 
-The FM Radio example is a command-line broadcast FM radio receiver, built with
+The FM Radio example is a command-line FM broadcast radio receiver, built with
 a small flow graph containing an
 [`RtlSdrSource`](0.reference-manual.md#rtlsdrsource), a
 [`WBFMMonoDemodulator`](0.reference-manual.md#wbfmmonodemodulator), and a
@@ -230,25 +238,25 @@ int main(int argc, char *argv[]) {
 }
 ```
 
-This example may be built in the [embed](../embed/) directory with `make
-examples`.
+This example may be built in the [embed](../embed/) directory with `make examples`.
 
 ```
 luaradio/embed $ make examples
+...
 luaradio/embed $ export LD_LIBRARY_PATH=build
-luaradio/embed $ ./build/examples/fmradio
-Usage: ./build/examples/fmradio <FM station frequency>
+luaradio/embed $ ./build/examples/fm-radio
+Usage: ./build/examples/fm-radio <FM station frequency>
 luaradio/embed $
 ```
 
 Listen to 91.1 MHz:
 
 ```
-luaradio/embed $ ./build/examples/fmradio 91.1e6
+luaradio/embed $ ./build/examples/fm-radio 91.1e6
 ```
 
-Note: there is no need to set `LD_LIBRARY_PATH`, if `libluaradio.so.0` is
-installed to a library search path like `/usr/lib`.
+Note: there is no need to set `LD_LIBRARY_PATH` if LuaRadio is installed, as
+`libluaradio.so.0` will be in a library search path like `/usr/lib`.
 
 ### RDS Timesync
 
@@ -266,7 +274,7 @@ date to an RDS-enabled FM radio station.  It is built with a small flow graph
 containing an [`RtlSdrSource`](0.reference-manual.md#rtlsdrsource), an
 [`RDSReceiver`](0.reference-manual.md#rdsreceiver), and a
 [`RawFileSink`](0.reference-manual.md#rawfilesink).  The frames decoded by the
-RDS receiver are serialized to the C application through the raw file sink. The
+RDS receiver are serialized to the C application through the `RawFileSink`. The
 C application scans for the time and date message type, and once it finds one,
 decodes it and sets the system time and date to it.
 
@@ -407,18 +415,18 @@ int main(int argc, char *argv[]) {
 }
 ```
 
-This example may be built in the [embed](../embed/) directory with `make
-examples`.
+This example may be built in the [embed](../embed/) directory with `make examples`.
 
 ```
 luaradio/embed $ make examples
+...
 luaradio/embed $ export LD_LIBRARY_PATH=build
 luaradio/embed $ ./build/examples/rds-timesync
-Usage: ./build/examples/fmradio <FM station frequency>
+Usage: ./build/examples/fm-radio <FM station frequency>
 luaradio/embed $
 ```
 
-Set time with 88.5 MHz:
+Sync time and date with 88.5 MHz:
 
 ```
 luaradio/embed $ ./build/examples/rds-timesync 88.5e6
@@ -428,29 +436,29 @@ Setting system time to Tue May 10 23:11:00 2016
 luaradio/embed $
 ```
 
-Note: there is no need to set `LD_LIBRARY_PATH`, if `libluaradio.so.0` is
-installed to a library search path like `/usr/lib`.
+Note: there is no need to set `LD_LIBRARY_PATH` if LuaRadio is installed, as
+`libluaradio.so.0` will be in a library search path like `/usr/lib`.
 
 ## Building
 
 ### Dynamically Linked
 
-To compile the examples and link them with the `libluaradio` and
-`libluajit-5.1` shared libraries:
+Compile the examples and link them with the `libluaradio` and `libluajit-5.1`
+shared libraries:
 
 ```
-$ clang fmradio.c -o fmradio -lluaradio -lluajit-5.1
-$ clang rds-timesync.c -o rds-timesync -lluaradio -lluajit-5.1
+$ clang fm-radio.c -o fm-radio -lluaradio -lluajit-5.1 -Wl,-E
+$ clang rds-timesync.c -o rds-timesync -lluaradio -lluajit-5.1 -Wl,-E
 ```
 
-You may need to add include and library paths with `-I` and `-L`, respectively,
+You may need to add header and library paths with `-I` and `-L`, respectively,
 if LuaRadio is not installed to standard paths.
 
 We can check with `ldd` that these executables only depend on standard
 libraries, `libluaradio`, and `libluajit-5.1`:
 
 ```
-$ ldd fmradio
+$ ldd fm-radio
         linux-vdso.so.1 (0x00007ffc76d3a000)
         libluaradio.so.0 => /usr/lib/libluaradio.so.0 (0x00007f566ac4f000)
         libluajit-5.1.so.2 => /usr/lib/libluajit-5.1.so.2 (0x00007f566a9df000)
@@ -473,11 +481,11 @@ $
 
 ### Statically Linked
 
-To compile the examples and link them with the `libluaradio` and `libluajit`
+Compile the examples and link them with the `libluaradio` and `libluajit`
 static libraries:
 
 ```
-$ clang fmradio.c -o fmradio -Wl,--whole-archive,-E libluaradio.a -Wl,--no-whole-archive libluajit.a -ldl -lm
+$ clang fm-radio.c -o fm-radio -Wl,--whole-archive,-E libluaradio.a -Wl,--no-whole-archive libluajit.a -ldl -lm
 $ clang rds-timesync.c -o rds-timesync -Wl,--whole-archive,-E libluaradio.a -Wl,--no-whole-archive libluajit.a -ldl -lm
 ```
 
@@ -488,12 +496,12 @@ After stripping symbols, these standalone executables contain the entire
 LuaJIT + LuaRadio runtime in 640 KB:
 
 ```
-$ du -h fmradio rds-timesync
-716K    fmradio
+$ du -h fm-radio rds-timesync
+716K    fm-radio
 716K    rds-timesync
-$ strip fmradio rds-timesync
-$ du -h fmradio rds-timesync
-640K    fmradio
+$ strip fm-radio rds-timesync
+$ du -h fm-radio rds-timesync
+640K    fm-radio
 640K    rds-timesync
 $
 ```
@@ -501,7 +509,7 @@ $
 We can check with `ldd` that these executables only depend on standard libraries:
 
 ```
-$ ldd fmradio
+$ ldd fm-radio
         linux-vdso.so.1 (0x00007fff08556000)
         libdl.so.2 => /usr/lib/libdl.so.2 (0x00007f9095e02000)
         libm.so.6 => /usr/lib/libm.so.6 (0x00007f9095afe000)
